feat: GLOBAL 唯一限制 + 無 GLOBAL 時保留 env var 預設頻道
- 限制系統只能有一個 GLOBAL 來源（create/update 皆驗證）
- syncMonitorConfig 合併策略：無 GLOBAL → DB 頻道 + env var 預設
- 有 GLOBAL → 只用 DB 頻道（GLOBAL 取代 env var）
- MonitorConfigStore 新增 defaultChannelIdList getter
- 新增 8 個測試覆蓋 GLOBAL 唯一性 + env var 合併邏輯

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>